fixed spacing

--- a/styles/iou.css
+++ b/styles/iou.css
@@ -270,6 +270,7 @@ ul {
   color: #bdbdbd;
   text-align: center;
   width: 100%;
+  margin-bottom: 2%;
 }
 
 .iou-image-description-grid {
